tests/ui/associated-type-bounds/return-type-notation/bad-inputs-and-output.stderr
error: return type notation uses `()` instead of `(..)` for elided arguments
  --> $DIR/bad-inputs-and-output.rs:19:24
   |
LL | fn baz<T: Trait<method(..): Send>>() {}
   |                        ^^ help: remove the `..`

error[E0658]: associated type bounds are unstable
  --> $DIR/bad-inputs-and-output.rs:11:17
   |
LL | fn foo<T: Trait<method(i32): Send>>() {}
   |                 ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52662 <https://github.com/rust-lang/rust/issues/52662> for more information
   = help: add `#![feature(associated_type_bounds)]` to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/bad-inputs-and-output.rs:15:17
   |
LL | fn bar<T: Trait<method() -> (): Send>>() {}
   |                 ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52662 <https://github.com/rust-lang/rust/issues/52662> for more information
   = help: add `#![feature(associated_type_bounds)]` to the crate attributes to enable

warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-inputs-and-output.rs:3:12
   |
LL | #![feature(return_type_notation, async_fn_in_trait)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `async_fn_in_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-inputs-and-output.rs:3:34
   |
LL | #![feature(return_type_notation, async_fn_in_trait)]
   |                                  ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information

error: argument types not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:11:23
   |
LL | fn foo<T: Trait<method(i32): Send>>() {}
   |                       ^^^^^ help: remove the input types: `()`

error: return type not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:15:25
   |
LL | fn bar<T: Trait<method() -> (): Send>>() {}
   |                         ^^^^^^ help: remove the return type

error: aborting due to 5 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0658`.
